force-app/main/default/objects/GFH_Resource__c/GFH_Resource__c.object-meta.xml
<CustomObject>
    <label>Resource</label>
    <pluralLabel>Resources</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>