force-app/main/default/objects/GFH_Resource__c/fields/LearningMetric_03__c.field-meta.xml
<CustomField>
    <fullName>LearningMetric_03__c</fullName>
    <label>Learning Metric 03</label>
    <type>Date</type>
</CustomField>