force-app/main/default/objects/GFH_Resource__c/fields/LearningMetric_08__c.field-meta.xml
<CustomField>
    <fullName>LearningMetric_08__c</fullName>
    <label>Learning Metric 08</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>