force-app/main/default/objects/GFH_Resource__c/fields/LearningMetric_15__c.field-meta.xml
<CustomField>
    <fullName>LearningMetric_15__c</fullName>
    <label>Learning Metric 15</label>
    <type>Date</type>
</CustomField>